# verification-domain-profiles

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  LICENSE-DATA.md  Makefile  NOTICE  README.md  REPRODUCE.md  codemeta.json  environment.yml  pyproject.toml  requirements-validation.txt
checker/: verify_profile_object.py
docs/: ALGORITHM_CONTRACT.md  CHANGELOG.md  CLAIM_EVIDENCE_MAP.md  COMPUTATIONAL_STUDY.md  INDEPENDENT_REPLICATION.md  LIMITATIONS.md  MATHEMATICAL_CONTRACT.md  MIGRATION_v1_TO_v2.md  PROOF_OBJECT_CONTRACT.md  PUBLIC_RELEASE_CHECKLIST_v2.0.1.md  RELATED_WORK_AND_BENCHMARK_BOUNDARIES.md  RELEASE_NOTES_2.0.0.md  RELEASE_NOTES_2.0.1.md  THEOREM_BOUNDARY_CASES.md
figures/: Fig1_profile_trichotomy.eps  Fig2_chebyshev_threshold_ratio.eps  Fig3_row_economy.eps  Fig4_scaling_baseline.eps
protocol/: COMPUTATIONAL_PROTOCOL.json  COMPUTATIONAL_PROTOCOL.sha256
schemas/: instance.schema.json  minimum_budget_certificate.schema.json  profile_record.schema.json
scripts/: export_exact_objects.py  finalise_postdeposit_metadata.py  finalise_release_doi.py  make_manuscript_figures.py  run_computational_study.py  run_numeric_full_domain_scaling.py  run_release_validation.py  run_wheel_smoke.py  validate_distribution.py
tests/: test_exact_core.py  test_exact_lp.py  test_standalone_checker.py  test_structured_oracles.py
validation/: CLAIM_EVIDENCE_MAP.csv  FILE_MANIFEST.sha256  checker_imports.json  distribution.json  distribution_scan.json  manifest_summary.json  metadata.json  mutations.json  postdeposit_doi.json  release_validation.json  replay.json  (+4 more)
(+460 files in other folders)
